--- a/web/pages/index.html
+++ b/web/pages/index.html
@@ -2,12 +2,20 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Мой сайт</title>
+    <title>Космический Web App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
-    <h1>Добро пожаловать на сайт!</h1>
-    <p>Это сайт, открытый через Telegram бот.</p>
+    <h1>Добро пожаловать в космос!</h1>
+    <p>Это Web App внутри Telegram.</p>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+        // Инициализация Telegram Web App
+        const tg = window.Telegram.WebApp;
+        tg.ready();
+        tg.expand(); // Расширяет Web App на полный экран
+    </script>
     <script src="/static/js/script.js"></script>
 </body>
 </html>
